[package]
name = "json-threat-protection"
version = "0.1.1"
edition = "2021"
authors = ["ADD-SP <add_sp@outlook.com>"]
license = "MIT"
repository = "https://github.com/ADD-SP/json-threat-protection.rs"
documentation = "https://docs.rs/json-threat-protection"
keywords = ["json", "security", "validator", "parser"]
categories = ["parsing"]
exclude = ["benches/", ".github/", "fuzz/", "data/"]
description = """
A crate to protect against malicious JSON payloads.
"""

[dependencies]
thiserror = "1.0.61"

[dev-dependencies]
serde = "1.0.204"
serde_json = { version = "1.0.121", features = ["std", "arbitrary_precision"] }
criterion = "0.5"

[[bench]]
name = "memory"
harness = false
