[package]
name = "json-threat-protection-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde = "1.0.204"
serde_json = "1.0.120"

[dependencies.json-threat-protection]
path = ".."

[[bin]]
name = "simple"
path = "simple/simple.rs"
test = false
doc = false
bench = false
